console + screenupdate rdy

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
       rel="stylesheet"
       href="./style.css"
     />
-    <title>Document</title>
+    <title>TOP | TicTacToe</title>
   </head>
   <body>
+    <main>
+      <div class="container">
+        <h1 class="turn"></h1>
+        <div class="board"></div>
+      </div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
