working strikethrough line feature

--- a/index.html
+++ b/index.html
@@ -15,8 +15,24 @@
   <body>
     <main>
       <div class="container">
-        <h1 class="turn"></h1>
-        <div class="board"></div>
+        <h1>Welcome to Tic Tac Toe</h1>
+        <form id="playerForm">
+          <label for="player1">Player 1 Name:</label>
+          <input
+            type="text"
+            id="player1"
+            placeholder="Player 1"
+          />
+          <br />
+          <label for="player2">Player2 Name:</label>
+          <input
+            type="text"
+            id="player2"
+            placeholder="Player 2"
+          />
+          <br />
+          <button type="button">Start Game</button>
+        </form>
       </div>
     </main>
     <script src="./script.js"></script>
